@@ -1,9 +1,6 @@
 package it.pagopa.transactions.utils;
 
-import it.pagopa.ecommerce.commons.documents.BaseTransactionView;
-import it.pagopa.ecommerce.commons.documents.v1.Transaction;
-import it.pagopa.ecommerce.commons.documents.v1.TransactionActivatedEvent;
-import it.pagopa.ecommerce.commons.documents.v1.TransactionAuthorizationRequestedEvent;
+import it.pagopa.ecommerce.commons.documents.v2.TransactionActivatedEvent;
 import it.pagopa.ecommerce.commons.domain.Confidential;
 import it.pagopa.ecommerce.commons.domain.v2.Email;
 import it.pagopa.ecommerce.commons.domain.v2.RptId;
@@ -13,7 +10,6 @@ import it.pagopa.ecommerce.commons.generated.server.model.TransactionStatusDto;
 import it.pagopa.ecommerce.commons.v1.TransactionTestUtils;
 import it.pagopa.generated.transactions.server.model.NewTransactionRequestDto;
 import it.pagopa.generated.transactions.server.model.PaymentNoticeInfoDto;
-import it.pagopa.transactions.exceptions.NotImplementedException;
 import it.pagopa.transactions.exceptions.TransactionNotFoundException;
 import it.pagopa.transactions.repositories.TransactionsEventStoreRepository;
 import org.junit.jupiter.api.Test;
@@ -21,7 +17,7 @@ import org.mockito.Mockito;
 import reactor.core.publisher.Flux;
 import reactor.test.StepVerifier;
 
-import java.time.ZonedDateTime;
+import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.BDDMockito.given;
@@ -36,8 +32,9 @@ class TransactionsUtilsTest {
     @Test
     void shouldReduceTransactionCorrectly() {
         TransactionId transactionId = new TransactionId(TransactionTestUtils.TRANSACTION_ID);
-        TransactionActivatedEvent transactionActivatedEvent = TransactionTestUtils.transactionActivateEvent();
-        TransactionAuthorizationRequestedEvent transactionAuthorizationRequestedEvent = TransactionTestUtils
+        it.pagopa.ecommerce.commons.documents.v1.TransactionActivatedEvent transactionActivatedEvent = it.pagopa.ecommerce.commons.v1.TransactionTestUtils
+                .transactionActivateEvent();
+        it.pagopa.ecommerce.commons.documents.v1.TransactionAuthorizationRequestedEvent transactionAuthorizationRequestedEvent = it.pagopa.ecommerce.commons.v1.TransactionTestUtils
                 .transactionAuthorizationRequestedEvent();
         Flux events = Flux.just(transactionActivatedEvent, transactionAuthorizationRequestedEvent);
         given(eventStoreRepository.findByTransactionIdOrderByCreationDateAsc(transactionId.value().toString()))
@@ -107,165 +104,88 @@ class TransactionsUtilsTest {
     }
 
     @Test
-    void shouldGetPaymentNoticesFromTransactionV1() {
-        TransactionsUtils utils = new TransactionsUtils(null, null);
-        assertNotNull(
-                utils.getPaymentNotices(
-                        it.pagopa.ecommerce.commons.v1.TransactionTestUtils
-                                .transactionDocument(TransactionStatusDto.ACTIVATED, ZonedDateTime.now())
-                )
-        );
-    }
-
-    @Test
     void shouldGetPaymentNoticesFromTransactionV2() {
         TransactionsUtils utils = new TransactionsUtils(null, null);
         assertNotNull(
-                utils.getPaymentNotices(
-                        it.pagopa.ecommerce.commons.v2.TransactionTestUtils
-                                .transactionDocument(TransactionStatusDto.ACTIVATED, ZonedDateTime.now())
-                )
+                utils.getPaymentNotices(it.pagopa.ecommerce.commons.v2.TransactionTestUtils.transactionActivateEvent())
         );
     }
 
     @Test
-    void shouldGetPaymentNoticesFromTransactionInvalidClass() {
-        TransactionsUtils utils = new TransactionsUtils(null, null);
-        assertThrows(
-                NotImplementedException.class,
-                () -> utils.getPaymentNotices(Mockito.mock(BaseTransactionView.class))
-        );
-    }
-
-    @Test
-    void shouldGetClientIdFromTransactionV1() {
-        it.pagopa.ecommerce.commons.documents.v1.Transaction.ClientId clientId = Transaction.ClientId.CHECKOUT;
-        TransactionsUtils utils = new TransactionsUtils(null, null);
-        it.pagopa.ecommerce.commons.documents.v1.Transaction transaction = it.pagopa.ecommerce.commons.v1.TransactionTestUtils
-                .transactionDocument(TransactionStatusDto.ACTIVATED, ZonedDateTime.now());
-        transaction.setClientId(clientId);
-        String result = utils.getClientId(transaction);
-        assertNotNull(result);
-        assertEquals(clientId.name(), result);
-    }
-
-    @Test
-    void shouldGetClientIdFromTransactionV2() {
+    void shouldGetClientIdFromTransactionActivatedEventV2() {
         it.pagopa.ecommerce.commons.documents.v2.Transaction.ClientId clientId = it.pagopa.ecommerce.commons.documents.v2.Transaction.ClientId.CHECKOUT;
         TransactionsUtils utils = new TransactionsUtils(null, null);
-        it.pagopa.ecommerce.commons.documents.v2.Transaction transaction = it.pagopa.ecommerce.commons.v2.TransactionTestUtils
-                .transactionDocument(TransactionStatusDto.ACTIVATED, ZonedDateTime.now());
-        transaction.setClientId(clientId);
-        String result = utils.getClientId(transaction);
+        TransactionActivatedEvent transactionActivatedEvent = it.pagopa.ecommerce.commons.v2.TransactionTestUtils
+                .transactionActivateEvent();
+        transactionActivatedEvent.getData().setClientId(clientId);
+        String result = utils.getClientId(transactionActivatedEvent);
         assertNotNull(result);
         assertEquals(clientId.name(), result);
     }
 
     @Test
-    void shouldGetEffectiveClientIdFromTransactionV2() {
+    void shouldGetEffectiveClientIdFromTransactionActivatedEventV2() {
         it.pagopa.ecommerce.commons.documents.v2.Transaction.ClientId clientId = it.pagopa.ecommerce.commons.documents.v2.Transaction.ClientId.WISP_REDIRECT;
         TransactionsUtils utils = new TransactionsUtils(null, null);
-        it.pagopa.ecommerce.commons.documents.v2.Transaction transaction = it.pagopa.ecommerce.commons.v2.TransactionTestUtils
-                .transactionDocument(TransactionStatusDto.ACTIVATED, ZonedDateTime.now());
-        transaction.setClientId(clientId);
-        String result = utils.getEffectiveClientId(transaction);
+        TransactionActivatedEvent transactionActivatedEvent = it.pagopa.ecommerce.commons.v2.TransactionTestUtils
+                .transactionActivateEvent();
+        transactionActivatedEvent.getData().setClientId(clientId);
+        String result = utils.getEffectiveClientId(transactionActivatedEvent);
         assertNotNull(result);
         assertEquals(clientId.getEffectiveClient().name(), result);
     }
 
     @Test
-    void shouldGetClientIdFromTransactionInvalidClass() {
+    void shouldGetEmailFromTransactionActivatedEventV2() {
         TransactionsUtils utils = new TransactionsUtils(null, null);
-        assertThrows(NotImplementedException.class, () -> utils.getClientId(Mockito.mock(BaseTransactionView.class)));
-    }
-
-    @Test
-    void shouldGetEmailFromTransactionV1() {
-        TransactionsUtils utils = new TransactionsUtils(null, null);
-        it.pagopa.ecommerce.commons.documents.v1.Transaction transaction = it.pagopa.ecommerce.commons.v1.TransactionTestUtils
-                .transactionDocument(TransactionStatusDto.ACTIVATED, ZonedDateTime.now());
-        Confidential<Email> email = utils.getEmail(transaction);
+        TransactionActivatedEvent transactionActivateEvent = it.pagopa.ecommerce.commons.v2.TransactionTestUtils
+                .transactionActivateEvent();
+        Confidential<Email> email = utils.getEmail(transactionActivateEvent);
         assertNotNull(email);
-    }
-
-    @Test
-    void shouldGetEmailFromTransactionV2() {
-        TransactionsUtils utils = new TransactionsUtils(null, null);
-        it.pagopa.ecommerce.commons.documents.v2.Transaction transaction = it.pagopa.ecommerce.commons.v2.TransactionTestUtils
-                .transactionDocument(TransactionStatusDto.ACTIVATED, ZonedDateTime.now());
-        Confidential<Email> email = utils.getEmail(transaction);
-        assertNotNull(email);
-    }
-
-    @Test
-    void shouldGetEmailFromTransactionInvalidClass() {
-        TransactionsUtils utils = new TransactionsUtils(null, null);
-        assertThrows(NotImplementedException.class, () -> utils.getEmail(Mockito.mock(BaseTransactionView.class)));
-    }
-
-    @Test
-    void shouldGetTransactionTotalAmountV1() {
-        TransactionsUtils utils = new TransactionsUtils(null, null);
-        it.pagopa.ecommerce.commons.documents.v1.Transaction transaction = it.pagopa.ecommerce.commons.v1.TransactionTestUtils
-                .transactionDocument(TransactionStatusDto.ACTIVATED, ZonedDateTime.now());
-        int totalAmount = transaction.getPaymentNotices().stream()
-                .mapToInt(
-                        it.pagopa.ecommerce.commons.documents.PaymentNotice::getAmount
-                ).sum();
-        Integer methodTotalAmount = utils.getTransactionTotalAmount(transaction);
-        assertEquals(totalAmount, methodTotalAmount.intValue());
     }
 
     @Test
     void shouldGetTransactionTotalAmountV2() {
         TransactionsUtils utils = new TransactionsUtils(null, null);
-        it.pagopa.ecommerce.commons.documents.v2.Transaction transaction = it.pagopa.ecommerce.commons.v2.TransactionTestUtils
-                .transactionDocument(TransactionStatusDto.ACTIVATED, ZonedDateTime.now());
-        int totalAmount = transaction.getPaymentNotices().stream()
+        it.pagopa.ecommerce.commons.documents.v2.TransactionActivatedEvent transactionActivateEvent = it.pagopa.ecommerce.commons.v2.TransactionTestUtils
+                .transactionActivateEvent();
+        int totalAmount = transactionActivateEvent.getData().getPaymentNotices().stream()
                 .mapToInt(
                         it.pagopa.ecommerce.commons.documents.PaymentNotice::getAmount
                 ).sum();
-        Integer methodTotalAmount = utils.getTransactionTotalAmount(transaction);
+        Integer methodTotalAmount = utils
+                .getTransactionTotalAmountFromTransactionActivatedEvent(transactionActivateEvent);
         assertEquals(totalAmount, methodTotalAmount.intValue());
-    }
-
-    @Test
-    void shouldGetRptIdV1() {
-        TransactionsUtils utils = new TransactionsUtils(null, null);
-        it.pagopa.ecommerce.commons.documents.v1.Transaction transaction = it.pagopa.ecommerce.commons.v1.TransactionTestUtils
-                .transactionDocument(TransactionStatusDto.ACTIVATED, ZonedDateTime.now());
-        RptId rptId = new RptId(transaction.getPaymentNotices().get(0).getRptId());
-        RptId rptIdExtracted = new RptId(utils.getRptId(transaction, 0));
-        assertEquals(rptId, rptIdExtracted);
     }
 
     @Test
     void shouldGetRptIdV2() {
         TransactionsUtils utils = new TransactionsUtils(null, null);
-        it.pagopa.ecommerce.commons.documents.v2.Transaction transaction = it.pagopa.ecommerce.commons.v2.TransactionTestUtils
-                .transactionDocument(TransactionStatusDto.ACTIVATED, ZonedDateTime.now());
-        RptId rptId = new RptId(transaction.getPaymentNotices().get(0).getRptId());
-        RptId rptIdExtracted = new RptId(utils.getRptId(transaction, 0));
+        it.pagopa.ecommerce.commons.documents.v2.TransactionActivatedEvent transactionActivateEvent = it.pagopa.ecommerce.commons.v2.TransactionTestUtils
+                .transactionActivateEvent();
+        RptId rptId = new RptId(transactionActivateEvent.getData().getPaymentNotices().getFirst().getRptId());
+        RptId rptIdExtracted = new RptId(utils.getRptId(transactionActivateEvent, 0));
         assertEquals(rptId, rptIdExtracted);
     }
 
     @Test
-    void shouldGetIsAllCCPV1() {
+    void shouldGetAllRptIdsV2() {
         TransactionsUtils utils = new TransactionsUtils(null, null);
-        it.pagopa.ecommerce.commons.documents.v1.Transaction transaction = it.pagopa.ecommerce.commons.v1.TransactionTestUtils
-                .transactionDocument(TransactionStatusDto.ACTIVATED, ZonedDateTime.now());
-        boolean isAllCcp = transaction.getPaymentNotices().get(0).isAllCCP();
-        boolean isAllCcpCalculated = utils.isAllCcp(transaction, 0);
-        assertEquals(isAllCcp, isAllCcpCalculated);
+        it.pagopa.ecommerce.commons.documents.v2.TransactionActivatedEvent transactionActivateEvent = it.pagopa.ecommerce.commons.v2.TransactionTestUtils
+                .transactionActivateEvent();
+        List<RptId> rptIdsFromData = transactionActivateEvent.getData().getPaymentNotices().stream()
+                .map(p -> new RptId(p.getRptId())).toList();
+        List<RptId> rptIdExtracted = utils.getRptIds(transactionActivateEvent).stream().map(RptId::new).toList();
+        assertEquals(rptIdsFromData, rptIdExtracted);
     }
 
     @Test
     void shouldGetIsAllCCPV2() {
         TransactionsUtils utils = new TransactionsUtils(null, null);
-        it.pagopa.ecommerce.commons.documents.v2.Transaction transaction = it.pagopa.ecommerce.commons.v2.TransactionTestUtils
-                .transactionDocument(TransactionStatusDto.ACTIVATED, ZonedDateTime.now());
-        boolean isAllCcp = transaction.getPaymentNotices().get(0).isAllCCP();
-        boolean isAllCcpCalculated = utils.isAllCcp(transaction, 0);
+        it.pagopa.ecommerce.commons.documents.v2.TransactionActivatedEvent transactionActivateEvent = it.pagopa.ecommerce.commons.v2.TransactionTestUtils
+                .transactionActivateEvent();
+        boolean isAllCcp = transactionActivateEvent.getData().getPaymentNotices().getFirst().isAllCCP();
+        boolean isAllCcpCalculated = utils.isAllCcp(transactionActivateEvent, 0);
         assertEquals(isAllCcp, isAllCcpCalculated);
     }
 
